<resources>
    <string name="app_name">MyMovies</string>
    <string name="insert"> INSERT MOVIES </string>
    <string name="movie_title">Movie title</string>
    <string name="enter_movie_title_here">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="enter_genre_here">Enter genre here</string>
    <string name="year">Year</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string-array name="spnMovies">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>